--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,22 @@
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8"
   },
-  "python.formatting.provider": "none"
+  "python.formatting.provider": "none",
+  "python.analysis.typeCheckingMode": "basic",
+  "sqltools.connections": [
+    {
+      "mysqlOptions": {
+        "authProtocol": "default",
+        "enableSsl": "Disabled"
+      },
+      "previewLimit": 50,
+      "server": "localhost",
+      "port": 3306,
+      "driver": "MySQL",
+      "name": "mysql1",
+      "database": "LittleLemon",
+      "username": "root",
+      "askForPassword": true
+    }
+  ]
 }
